<resources>
    <string name="app_name">Calculator</string>
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="equal">=</string>
    <string name="sum">+</string>
    <string name="subtraction">-</string>
    <string name="division">÷</string>
    <string name="multiply">×</string>
    <string name="module">.</string>
    <string name="root_square">√</string>
    <string name="deleted">DEL</string>
    <string name="square">x²</string>
    <string name="c">C</string>
    <string name="_0">0</string>
    <string name="modul">%</string>
    <string name="topEqual"><![CDATA[<]]></string>
    <string name="_cal">About</string>
    <string name="_creator">About</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="create_by_romeodev">Create by RomeoDev</string>
    <string name="theme">Theme</string>
    <string name="choose_theme">Choose theme</string>
</resources>