<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:background="#3F51B5"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:id="@+id/content"

    android:windowSoftInputMode="stateAlwaysHidden"
    android:orientation="horizontal"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:layout_marginTop="50dp"

        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_goneMarginTop="10sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:gravity="end"

            android:ellipsize="end"

            android:hint="@string/_0"
            android:lines="1"
            android:textColor="@color/white"
            android:textColorHint="#B1ADAD"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/sub_value"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginBottom="20dp"
            android:width="200dp"
            android:ellipsize="start"
            android:gravity="end"
            android:hint="@string/_0"
            android:singleLine="true"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textColorHint="#B1ADAD"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="295dp"
            tools:layout_editor_absoluteY="300dp" />

    </LinearLayout>
    <!-- 478dp -->

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"



        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content">

        <Button

            android:id="@+id/button_1"
            style="@style/NumberButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/num_1"

            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="213dp"
            tools:layout_editor_absoluteY="545dp" />

        <Button

            android:id="@+id/button_2"
            style="@style/NumberButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:padding="12sp"
            android:text="@string/num_2"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="213dp"
            tools:layout_editor_absoluteY="545dp" />


        <Button

            android:id="@+id/button_3"
            style="@style/NumberButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:gravity="center"
            android:padding="12sp"
            android:text="@string/num_3"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="213dp"
            tools:layout_editor_absoluteY="545dp" />

        <Button
            android:id="@+id/button_4"
            style="@style/NumberButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:gravity="center"
            android:padding="12sp"
            android:text="@string/num_4"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_5"
            style="@style/NumberButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:gravity="center"
            android:padding="12sp"
            android:tag="@string/num_5"
            android:text="@string/num_5"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_6"
            style="@style/NumberButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"

            android:layout_column="2"
            android:gravity="center"
            android:padding="12sp"
            android:text="@string/num_6"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="213dp"
            tools:layout_editor_absoluteY="545dp" />

        <Button
            android:id="@+id/button_7"
            style="@style/NumberButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:padding="12sp"
            android:text="@string/num_7"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="213dp"
            tools:layout_editor_absoluteY="545dp" />

        <Button
            android:id="@+id/button_8"
            style="@style/NumberButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:padding="12sp"
            android:text="@string/num_8"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="213dp"
            tools:layout_editor_absoluteY="545dp" />

        <Button
            android:id="@+id/button_9"
            style="@style/NumberButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_gravity="fill"
            android:gravity="center"
            android:padding="12sp"
            android:text="@string/num_9"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="213dp"
            tools:layout_editor_absoluteY="545dp" />


        <Button
            android:id="@+id/button_equal"
            android:background="#18171D"
            style="@style/ActionButtonStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="4"

            android:layout_gravity="fill"
            android:gravity="center"
            android:text="@string/equal"
            android:textColor="@color/white"
            android:textSize="20sp"
             />

        <Button

            android:id="@+id/button_deleted"
            style="@style/ActionButtonStyle"
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="4"
            android:paddingStart="19dp"
            android:drawableStart="@drawable/ic_baseline_backspace_24"
            android:layout_gravity="fill_vertical"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:drawablePadding="@dimen/cardview_default_radius"
            tools:layout_editor_absoluteX="213dp"
            tools:layout_editor_absoluteY="545dp" />

        <Button
            android:id="@+id/button_square"
            style="@style/ActionButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_gravity="fill_vertical"
            android:gravity="center"
            android:text="@string/square"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="213dp"
            tools:layout_editor_absoluteY="545dp" />

        <Button
            style="@style/ActionButtonStyle"
            android:id="@+id/button_reset"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_row="1"

            android:layout_rowSpan="3"
            android:layout_column="4"
            android:layout_columnSpan="0"
            android:layout_gravity="fill_vertical"
            android:gravity="center"
            android:text="@string/c"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="213dp"
            tools:layout_editor_absoluteY="545dp" />

        <!--- android:layout_row="3"
            android:layout_column="1"

            android:layout_row="4"
            android:layout_column="0"

            -->
        <Button
            android:id="@+id/button_0"
            style="@style/NumberButtonStyle"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:gravity="center"
            android:padding="12sp"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="213dp"
            tools:layout_editor_absoluteY="545dp" />
        <!--  Event -->

        <Button
            android:id="@+id/sum"
            style="@style/ActionButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:gravity="center"
            android:padding="12sp"
            android:text="@string/sum"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="213dp"
            tools:layout_editor_absoluteY="545dp" />

        <Button
            android:id="@+id/subtraction"
            style="@style/ActionButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:gravity="center"
            android:padding="12sp"
            android:text="@string/subtraction"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="213dp"
            tools:layout_editor_absoluteY="545dp" />

        <Button
            android:id="@+id/_multiply"
            style="@style/ActionButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="2"
            android:gravity="center"
            android:padding="12sp"
            android:text="@string/multiply"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="213dp"
            tools:layout_editor_absoluteY="545dp" />

        <Button
            android:layout_gravity="fill_vertical"
            android:id="@+id/division"
            style="@style/ActionButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowSpan="3"
            android:layout_column="3"
            android:gravity="center"
            android:padding="12sp"
            android:text="@string/division"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="213dp"
            tools:layout_editor_absoluteY="545dp" />

        <Button
            android:id="@+id/dot"
            style="@style/ActionButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:gravity="center"
            android:padding="12sp"
            android:text="@string/module"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="213dp"
            tools:layout_editor_absoluteY="545dp" />

        <Button
            android:id="@+id/root_square"
            style="@style/ActionButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="2"
            android:gravity="center"
            android:padding="12sp"
            android:text="@string/root_square"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="213dp"
            tools:layout_editor_absoluteY="545dp" />
        <Button
            android:id="@+id/module"
            style="@style/ActionButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="3"
            android:gravity="center"
            android:padding="12sp"
            android:text="@string/modul"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="213dp"
            tools:layout_editor_absoluteY="545dp" />
    </GridLayout>




</androidx.constraintlayout.widget.ConstraintLayout>